# vincibits-personal-trainer-assistant

./: jupyter_news_summarizer.ipynb  main.ipynb  main.py  new_summarizer.ipynb  news_summarizer.ipynb  news_summarizer.py  personal_trainner.py  pyproject.toml  vincibits-new-summarizer.py
